# cppcoro

./: .gitignore  CMakeLists.txt  README.md  readme.adoc
.devcontainer/: Dockerfile  devcontainer.json
include/cppcoro/: file_read_operation.hpp
lib/: CMakeLists.txt  io_service.cpp  write_only_file.cpp
lib/linux/: read_only_file.cpp  read_write_file.cpp
scripts/: clean.sh  rm_build_dirs.sh
scripts/git/: cleanup.sh
test/: CMakeLists.txt
